--- a/TODO
+++ b/TODO
@@ -26,6 +26,26 @@ http://github.com/willert/catalyst-plugin-log4perl-simple/tree
 
 # REFACTORING
 
+##  PSGI
+
+###  Blockers
+
+  * Fix nginx middlewares so that they are generic, or can somehow
+    be used by people with their own .psgi files
+  * Fix a sane / nicer way to do custom engines.
+
+#### Script survey
+
+###  Nice to have
+
+  * Capture arguments that the plack engine component was run with somewhere,
+    to more easily support custom args from scripts (e.g. Gitalist's 
+    --git_dir)
+  * throw away the restarter and allow using the restarters Plack provides
+  * remove per-request state from the engine instance
+  * be smarter about how we use PSGI - not every response needs to be delayed
+    and streaming
+
 ##  The horrible hack for plugin setup - replacing it:
 
  * Have a look at the Devel::REPL BEFORE_PLUGIN stuff
