Import of BOBTFISH/Catalyst-Runtime-5.90003.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90003
gitpan-cpan-path:         BOBTFISH/Catalyst-Runtime-5.90003.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/lib/Catalyst/Delta.pod
+++ b/lib/Catalyst/Delta.pod
@@ -61,6 +61,11 @@ function perfectly with this version of Catalyst).
 Has been updated to fix failing tests (although older versions still
 function perfectly with this version of Catalyst).
 
+=item Catalyst::Plugin::Authentication
+
+Has been updated to fix failing tests (although older versions still
+function perfectly with this version of Catalyst).
+
 =back
 
 =head1 PREVIOUS VERSIONS
