Import of BOBTFISH/Catalyst-Runtime-5.90009.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90009
gitpan-cpan-path:         BOBTFISH/Catalyst-Runtime-5.90009.tar.gz
gitpan-cpan-author:       BOBTFISH
gitpan-cpan-maturity:     released

--- a/lib/Catalyst/Upgrading.pod
+++ b/lib/Catalyst/Upgrading.pod
@@ -515,6 +515,13 @@ The correct fix is to re-arrange your class's inheritance hierarchy so that the
 COMPONENT method you would like to inherit is the first (left-hand most)
 COMPONENT method in your @ISA.
 
+=head2 Development server relying on environment variables
+
+Previously, the development server would allow propagation of system
+environment variables into the request environment, this has changed with the
+adoption of Plack. You can use L<Plack::Middleware::ForceEnv> to achieve the
+same effect.
+
 =head1 WARNINGS
 
 =head2 Actions in your application class
