Import of JJNAPIORK/Catalyst-Runtime-5.90020.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90020
gitpan-cpan-path:         JJNAPIORK/Catalyst-Runtime-5.90020.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,21 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90020 - TBA
+  ! Catalyst::Action now defines 'match_captures' so it is no long considered
+    an optional method.  This might break you code if you have made custom
+    action roles/classes where you define 'match_captures'.  You must change
+    your code to use a method modifier (such as 'around').
+  - New match method "Method($HTTP_METHOD)" where $HTTP_METHOD in (GET, POST,
+    PUT, HEAD, DELETE, OPTION) and shortcuts in controllers called "GET, POST
+    PUT, HEAD, DELETE, OPTION").  Tests and documentation.  Please note if you
+    are currently using Catalyst::ActionRole::MatchRequestMethods there may
+    be compatibility issues.  You should remove that actionrole since the built
+    in behavior is compatible on its own.
+  - Initial debug screen now shows HTTP Method Match info
+  - security fixes in the way we handle redirects
+  - Make Catalyst::Engine and Catalyst::Base immutable
+  - Some test and documentation improvements
+
 5.90019 - 2012-12-04 21:31:00
   - Fix for perl 5.17.6 (commit g7dc8663). RT#81601
   - Fix for perl 5.8. RT#61122
@@ -11,7 +27,7 @@
     HTTP::Message.
 
 5.90017 - 2012-10-19 22:33:00
-  - Change Catalsyt _parse_attrs so that when sub attr handlers:
+  - Change Catalyst _parse_attrs so that when sub attr handlers:
 
     1) Can return multiple pairs of new attributes.
     2) Get their returned attributes passed through the correct attribute handler.
