--- a/Changes
+++ b/Changes
@@ -1,5 +1,20 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90049_005 - TBA
+  - NEW FEATURE:  New Controller action attribute 'Consumes', which allows you
+    to specify the content type of the incoming request.  This makes it easier
+    to create actions that only handle certain content type POST or PUT, such
+    as actions that only handle JSON or actions that only understand classic
+    HTML forms.
+  - NEW FEATURE: Request->body_data is now also populated from classic HTML 
+    Forms using CGI::Struct to support nested data.  For non nested data you
+    should use the classic ->body_parameters method.
+  - Removed PSGI $env keys that are added on the 'plack.request.*' namespace
+    since after discussion it was clear those keys are not part of the public
+    API.  Keys removed: 'plack.request.query', 'plack.request.body', 
+    'plack.request.merged' and 'plack.request.http.body'. Altered some test
+    cases to reflect this change.
+
 5.90049_004 - 2013-10-18
   - JSON Data handler looks for both JSON::MaybeXS and JSON, and uses
     whichever is first (prefering to find JSON::MaybeXS).  This should
@@ -12,6 +27,7 @@
       - plack.request.body
       - plack.request.merged
       - plack.request.http.body
+    (NOTE: REMOVED IN 5.90049_005)
   - If incoming input (from a POST or PUT) is not buffered, create the
     buffer and set the correct psgi env keys to note this for downstream
     psgi apps / middleware.  This should solve some issues where Catalyst
