--- a/Changes
+++ b/Changes
@@ -1,5 +1,26 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90052 - 2013-12-18
+
+  - Fixed first block of startup debug messages missing when using a custom
+    logger that gets set at runtime, for example by overriding finalize_config
+  - Give a more descriptive error message when trying to load middleware that
+    does not exist.
+  - Change the way we initialize plugins to fix a bug where when using the 
+    populare ConfigLoader plugin, configs merged are not available for setting
+    up middleware and data handlers (and probably other things as well).
+
+    NOTE: This change might cause issues if you had code that was relying on the
+    broken behavior.  For example external configuration that was being loaded to
+    late to have effect might now take effect.  Please test you code carefully and
+    be aware of this possible issue </NOTE>.
+
+  - You may now also call 'setup_middleware' as a package method if you think
+    that loading middleware via configuration is a weird or broken idea.
+  - Various POD formating fixed.
+  - Improved some documentation about what type of filehandles that ->body can
+    accept and issues that might arise.
+
 5.90051 - 2013-11-06
   - Be more skeptical of the existance of $request->env to fix a regression
     introduced in Catalyst::Action::REST by the previous release
