--- a/Changes
+++ b/Changes
@@ -1,14 +1,12 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-  - Announcing the repo is not open for development of Perl Catalyst 'Runner'
-  - http://questhub.io/realm/perl/explore/latest/tag/runner
-
-5.90059_001 - 2013-12-19
-  - Removed deprecated Regexp dispatch type from dependency list.  If you are
-    using Regex[p] type dispatching you need to add the standalone distribution
-   'Catalyst::DispatchType::Regex' to you build system NOW or you application
-   will be broken.
-
+5.90053 - 2013-12-21
+  - Reverted a change in the previous release that moved the setup_log phase
+    to after setup_config.  This change was made to allow people to use
+    configuration that is late loaded (such as via the ConfigLoader Plugin)
+    to setup the plugin.  However it also broke the ability to use the log
+    during plugin setup (ie, it breaks lots of plugins).  Reverting the 
+    change.  See Catalyst::Delta for workarounds.
 
 5.90052 - 2013-12-18
 
