--- a/Changes
+++ b/Changes
@@ -1,7 +1,21 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-  - Announcing the repo is not open for development of Perl Catalyst 'Runner'
+  - Announcing the repo is now open for development of Perl Catalyst 'Runner'
   - http://questhub.io/realm/perl/explore/latest/tag/runner
+
+5.90059_004 - 2014-01-27
+  - Make sure IO handle objects do 'getline' before sending them to the
+    response callback, to properly support the PSGI specification.
+  - Added some backcompat code when setting a response body to an object
+    that does 'read' but not 'getline'.  Added deprecation notice for this
+    case.  Added docs to Catalyst::Delta.
+  - Catalyst::Delta contains a list of behaviors which will be considered
+    deprecated immediatelty.  Most items have workarounds and tweaks you can
+    make to avoid issues.  These deprecations are targeted for removal/enforcement
+    in the Catalyst 6 release.  Please review and give your feedback.
+  - More middleware to replace inline code (upasana++)
+  - Documentation around Exceptions and how we handle them.
+  - update copyright notices.
 
 5.90059_003 - 2013-12-24
   - More documentation about alternative ways to setup middleware.
