--- a/Changes
+++ b/Changes
@@ -3,6 +3,10 @@
   - Announcing the repo is now open for development of Perl Catalyst 'Runner'
   - http://questhub.io/realm/perl/explore/latest/tag/runner
 
+5.90059_005 - 2014-01-28
+  - Specify newested versions of some middleware in attempt to solve test errors
+    reported while installing.
+
 5.90059_004 - 2014-01-27
   - Make sure IO handle objects do 'getline' before sending them to the
     response callback, to properly support the PSGI specification.
