Import of JJNAPIORK/Catalyst-Runtime-5.90059_006.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90059_006
gitpan-cpan-path:         JJNAPIORK/Catalyst-Runtime-5.90059_006.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -3,10 +3,16 @@
   - Announcing the repo is now open for development of Perl Catalyst 'Runner'
   - http://questhub.io/realm/perl/explore/latest/tag/runner
 
-5.90059_005 - 2014-01-28
-  - Specify newested versions of some middleware in attempt to solve test errors
-    reported while installing.
+5.90059_006 - 2014-02-06
+  - MyApp->setup now returns $app to allow class method chaining.
+  - New Util helper functional localize $env to make it easier to mount PSIG
+    applications under controllers and actions.  See Catalyst::Utils/PSGI Helpers.
+  - NOTICE: Final Development release for Runner, unless significant issues are
+    raised.  Please test.
 
+5.90059_005 - 2014-01-28
+  - Specify newest versions of some middleware in attempt to solve test errors
+    reported while installing.  
 5.90059_004 - 2014-01-27
   - Make sure IO handle objects do 'getline' before sending them to the
     response callback, to properly support the PSGI specification.
