Import of JJNAPIORK/Catalyst-Runtime-5.90060.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-Runtime
gitpan-cpan-version:      5.90060
gitpan-cpan-path:         JJNAPIORK/Catalyst-Runtime-5.90060.tar.gz
gitpan-cpan-author:       JJNAPIORK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-  - Announcing the repo is now open for development of Perl Catalyst 'Runner'
-  - http://questhub.io/realm/perl/explore/latest/tag/runner
+5.90060 - 2014-02-07
+  - Same as 5.90059_006, just marking it as stable, no functional changes.
+
 
 5.90059_006 - 2014-02-06
   - MyApp->setup now returns $app to allow class method chaining.
