--- a/Changes
+++ b/Changes
@@ -1,6 +1,18 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-5.90061 - 2014-04-14
+5.90063 - 2013-05-01
+  - 'end' and other special actions won't catch HTTP style exceptions anymore.
+  - Fix bug where Catalyst did not properly detect the terminal width when in
+    debug mode and thus making the debug output narrow and hard to read.
+  - Documentation corrections for Util methods around localized PSGI $env.
+  - Improvements to auto detection of terminal width.
+  - Updating deprecation list to include Class::Load and ensure_class_loaded
+  - Added a few docs around middleware and corrected the order that middleware
+    is loaded when registering it via ->setup_middleware instead of via
+    configuration.
+  - Added a test case to make sure default middleware order is correct.
+s
+5.90062 - 2014-04-14
   - HTTP::Exception objects were not properly bubbled up to middleware since
     there was some code in Catalyst that was triggering stringification.
 
