--- a/Changes
+++ b/Changes
@@ -1,10 +1,25 @@
 # This file documents the revision history for Perl extension Catalyst.
 
-5.90065 - 2014-06-04
+5.90069_002
+  - Catalyst stash functionality has been moved to Middleware.  It should
+    work entirely the same when used as a context method, please report
+    questions or problems!
+  - Removed code related to supporting the long deprecated stand alone
+    PSGI Engine.  If you are still using this you code is now broken.
+    Luckily you can just stop using it and likely everything will work
+    under the new PSGI support built into Catalyst for several years.
+  - 'abort_chain_on_error_fix' now defaults to true.  If this behavior
+    causes you issues, you can explicitly turn it off by setting it to a 
+    non true defined value (0 is a good option here).
+  - When throwing an http style exception, make sure we properly flush the
+    existing log and report other errors in the error stack.
+
+5.90069_001
   - The Catalyst::Log object now has 'autoflush' (which defaults to true) and
     causes log messages to be written out in real-time. This is helpful for the
     test/dev server to be able to see messages during startup as well as before
     the end of the request when the log is flushed.
+  - Set encoding on STDERR when encoding is set in config
   - Fix spelling, grammar and structural errors in POD
   - Remove redundant ->setup call in t/head_middleware.t RT#95361
   - Fix test failures when running under CATALYST_DEBUG. RT#95358
