--- a/Changes
+++ b/Changes
@@ -1,5 +1,17 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90069_003
+  - The default log level is now 'info', not 'debug'.
+  - Finished merging all the encoding plugin code to core code.  The encoding
+    plugin is now just an empty package.  Also tried to improve encoding docs
+    a bit.
+  - Some additional changes to the stash middleware that should not break
+    anything new.
+  - Documentation around using Sendfile type http headers with a filehandle
+    type response.
+  - Merged from master branch to pick up some additional fixes and documentation
+    improvements.
+
 5.90069_002
   - Catalyst stash functionality has been moved to Middleware.  It should
     work entirely the same when used as a context method, please report
@@ -15,11 +27,14 @@
     existing log and report other errors in the error stack.
 
 5.90069_001
+  - Set encoding on STDERR when encoding is set in config
+  - documentation and test fixes
+
+5.90065 - 2014-06-04
   - The Catalyst::Log object now has 'autoflush' (which defaults to true) and
     causes log messages to be written out in real-time. This is helpful for the
     test/dev server to be able to see messages during startup as well as before
     the end of the request when the log is flushed.
-  - Set encoding on STDERR when encoding is set in config
   - Fix spelling, grammar and structural errors in POD
   - Remove redundant ->setup call in t/head_middleware.t RT#95361
   - Fix test failures when running under CATALYST_DEBUG. RT#95358
