--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+5.90070 - 2014-08-07
+  - Retagged previous release as stable; no changes
+
 5.90069_004
   - Fixed typo in middleware stash that was causing older Perls to fail
     certain tests.  No other changes.
